--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.5.0",
+    "simple-icons": "^15.14.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.8",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
